--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- First Section End -->
 
         <!-- Second Section Start -->
-        <section class="aboutMe-section flex-container">
+        <section id="aboutMe-section" class="flex-container">
             <div class="half-width ">
                 <img src="images/naf.png" alt="">
             </div>
@@ -45,7 +45,7 @@
         <!-- Second Section End -->
 
         <!-- Third Section Start -->
-        <section class="food-items">
+        <section id="food-items">
             <h1 style="text-align: center;">Our Recipies</h1>
     
             <p class="about-food">Here you can find our recipes. All of them are fresh and healthy. You can search in a certain category, look for a specific ingredient or just browse through all of them. We hope you enjoy!</p>
@@ -79,7 +79,7 @@
                 <p>These are our new recipes. We are always trying to introduce new foods for you. We wanted to give you a detailed selection of some of the best examples of good foods so that people looking for new tastes and potential. Here we bring two new food items <span class="bold">Mixed Green salad</span> and a <span class="bold">Cobb salad</span>. We hope you enjoy!</p>
             </div>
         
-            <div id="new-items">
+            <div class="new-items">
                 <div class="new-item-list">
                     <img src="images/Project Cover5.png" alt="">
                     <img src="images/Project Cover8.png" alt="">
