--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="full-container">
-        <!-- First Section Start -->
+        <!-- First Section Starts -->
         <section class="flex-container">
             <div class="first-half">
                 <h1><span class="orange-color">Skip</span> The Diet,</h1>
@@ -27,9 +27,9 @@
                 <img src="images/burger3.png" alt="">
             </div>
         </section>
-        <!-- First Section End -->
+        <!-- First Section Ends -->
 
-        <!-- Second Section Start -->
+        <!-- Second Section Starts -->
         <section id="aboutMe-section" class="flex-container">
             <div class="half-width ">
                 <img src="images/naf.png" alt="">
@@ -42,9 +42,9 @@
                 <a class="link-button" href="https://www.facebook.com/nurulafsar.fahim" target="_blank">Contact Me</a>
             </div>
         </section>
-        <!-- Second Section End -->
+        <!-- Second Section Ends -->
 
-        <!-- Third Section Start -->
+        <!-- Third Section Starts -->
         <section id="food-items">
             <h1 style="text-align: center;">Our Recipies</h1>
     
@@ -70,9 +70,9 @@
                 </div>
             </div>
         </section>
-        <!-- Third Section End -->
+        <!-- Third Section Ends -->
 
-        <!-- Fourth Section Start -->
+        <!-- Fourth Section Starts -->
         <section id="new-food-items">
             <div class="new-items">
                 <h1>What's New!</h1>
@@ -86,14 +86,23 @@
                 </div>
             </div>
         </section>
-        <!-- Fourth Section End -->
+        <!-- Fourth Section Ends -->
 
-        <!-- Footer Section Start -->
+        <!-- Fifth section starts -->
+        <section id="contact-us">
+            <h1>Contact Us</h1>
+            <a href="https://www.facebook.com/">Facebook</a>
+            <a href="https://twitter.com/">Twitter</a>
+            <a href="https://www.instagram.com/">Instagram</a>
+        </section>
+        <!-- Fifth section ends -->
+
+        <!-- Footer Section Starts -->
         <footer>
             <h3><span class="orange-color">FOOD</span> NETWORK</h3>
             <small>Eat healthy to live healthy. Live healthy to live happy</small>
         </footer>
-        <!-- Footer Section End -->
+        <!-- Footer Section Ends -->
     </div>
 </body>
 </html>
