--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- Fourth Section Ends -->
 
         <!-- Fifth section starts -->
-        <section id="contact-us">
+        <section class="contact-us">
             <h1>Contact Us</h1>
             <a href="https://www.facebook.com/">Facebook</a>
             <a href="https://twitter.com/">Twitter</a>
