--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <!-- Fifth section starts -->
         <section class="contact-us">
             <h1>Contact Us</h1>
-            <a href="https://www.facebook.com/">Facebook</a>
-            <a href="https://twitter.com/">Twitter</a>
-            <a href="https://www.instagram.com/">Instagram</a>
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a href="https://twitter.com/" target="_blank">Twitter</a>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
         </section>
         <!-- Fifth section ends -->
 
